# xwin

./: .earthlyignore  .gitignore  CHANGELOG.md  Cargo.toml  Earthfile  LICENSE-MIT  README.md  deny.toml  release.toml  xwin.dockerfile
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
docs/: example-map.toml
src/: bin.rs  ctx.rs  download.rs  lib.rs  main.rs  manifest.rs  minimize.rs  pack.rs  splat.rs  unpack.rs  util.rs
tests/: compiles.rs  deterministic.rs  deterministic_manifest.json  expected.txt
tests/snapshots/: compiles__verify_compiles_minimized.snap  deterministic__verify_deterministic.snap  xwin-download.snap  xwin-list.snap  xwin-minimize.snap  xwin-splat.snap  xwin-unpack.snap  xwin.snap
tests/xwin-test/: Cargo.toml
tests/xwin-test/src/: main.rs
