[package]
name = "xwin-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Compiles and links C/C++ code
breakpad-sys = "0.1"
windows-sys = { version = "0.28", features = [
    "AI_MachineLearning",
    "ApplicationModel_Activation",
    "ApplicationModel_AppExtensions",
    "ApplicationModel_AppService",
    "ApplicationModel_Appointments",
    "ApplicationModel_Appointments_AppointmentsProvider",
    "ApplicationModel_Appointments_DataProvider",
    "ApplicationModel_Background",
    "ApplicationModel_Calls_Background",
    "ApplicationModel_Calls_Provider",
    "ApplicationModel_Chat",
    "ApplicationModel_CommunicationBlocking",
    "ApplicationModel_Contacts_DataProvider",
    "ApplicationModel_Contacts_Provider",
    "ApplicationModel_ConversationalAgent",
    "ApplicationModel_Core",
    "ApplicationModel_DataTransfer_DragDrop_Core",
    "ApplicationModel_DataTransfer",
    "ApplicationModel_Email_DataProvider",
    "ApplicationModel_ExtendedExecution_Foreground",
    "ApplicationModel_Holographic",
    "ApplicationModel_LockScreen",
    "ApplicationModel_Payments_Provider",
    "ApplicationModel_Resources_Core",
    "ApplicationModel_Resources_Management",
    "ApplicationModel_Search_Core",
    "ApplicationModel_SocialInfo_Provider",
    "ApplicationModel_Store_LicenseManagement",
    "ApplicationModel_UserActivities_Core",
    "ApplicationModel_UserDataAccounts_Provider",
    "ApplicationModel_UserDataAccounts_SystemAccess",
    "ApplicationModel_UserDataTasks_DataProvider",
    "ApplicationModel_VoiceCommands",
    "ApplicationModel_Wallet_System",
    "Data_Html",
    "Data_Json",
    "Data_Pdf",
    "Data_Text",
    "Data_Xml_Dom",
    "Data_Xml_Xsl",
    "Devices_Adc_Provider",
    "Devices_AllJoyn",
    "Devices_Background",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_Background",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth_Rfcomm",
    "Devices_Custom",
    "Devices_Display_Core",
    "Devices_Enumeration_Pnp",
    "Devices_Geolocation_Geofencing",
    "Devices_Gpio_Provider",
    "Devices_Haptics",
    "Devices_HumanInterfaceDevice",
    "Devices_I2c_Provider",
    "Devices_Input_Preview",
    "Devices_Lights_Effects",
    "Devices_Midi",
    "Devices_Perception_Provider",
    "Devices_PointOfService_Provider",
    "Devices_Portable",
    "Devices_Power",
    "Devices_Printers_Extensions",
    "Devices_Pwm_Provider",
    "Devices_Radios",
    "Devices_Scanners",
    "Devices_Sensors_Custom",
    "Devices_SerialCommunication",
    "Devices_SmartCards",
    "Devices_Sms",
    "Devices_Spi_Provider",
    "Devices_Usb",
    "Devices_WiFi",
    "Devices_WiFiDirect_Services",
    "Embedded_DeviceLockdown",
    "Foundation_Collections",
    "Foundation_Diagnostics",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "Gaming_Input_Custom",
    "Gaming_Input_ForceFeedback",
    "Gaming_UI",
    "Gaming_XboxLive_Storage",
    "Globalization_Collation",
    "Globalization_DateTimeFormatting",
    "Globalization_Fonts",
    "Globalization_NumberFormatting",
    "Globalization_PhoneNumberFormatting",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Display_Core",
    "Graphics_Effects",
    "Graphics_Holographic",
    "Graphics_Imaging",
    "Graphics_Printing_OptionDetails",
    "Graphics_Printing_PrintSupport",
    "Graphics_Printing_PrintTicket",
    "Graphics_Printing_Workflow",
    "Graphics_Printing3D",
    "Management_Core",
    "Management_Deployment",
    "Management_Policies",
    "Management_Update",
    "Management_Workplace",
    "Media_AppBroadcasting",
    "Media_AppRecording",
    "Media_Audio",
    "Media_Capture_Core",
    "Media_Capture_Frames",
    "Media_Casting",
    "Media_ClosedCaptioning",
    "Media_ContentRestrictions",
    "Media_Control",
    "Media_Core",
    "Media_Devices_Core",
    "Media_DialProtocol",
    "Media_Editing",
    "Media_Effects",
    "Media_FaceAnalysis",
    "Media_Import",
    "Media_MediaProperties",
    "Media_Miracast",
    "Media_Ocr",
    "Media_PlayTo",
    "Media_Playback",
    "Media_Playlists",
    "Media_Protection_PlayReady",
    "Media_Render",
    "Media_SpeechRecognition",
    "Media_SpeechSynthesis",
    "Media_Streaming_Adaptive",
    "Media_Transcoding",
    "Networking_BackgroundTransfer",
    "Networking_Connectivity",
    "Networking_NetworkOperators",
    "Networking_Proximity",
    "Networking_PushNotifications",
    "Networking_ServiceDiscovery_Dnssd",
    "Networking_Sockets",
    "Networking_Vpn",
    "Networking_XboxLive",
    "Perception_Automation_Core",
    "Perception_People",
    "Perception_Spatial_Surfaces",
    "Phone_ApplicationModel",
    "Phone_Devices_Notification",
    "Phone_Devices_Power",
    "Phone_Management_Deployment",
    "Phone_Media_Devices",
    "Phone_Notification_Management",
    "Phone_PersonalInformation_Provisioning",
    "Phone_Speech_Recognition",
    "Phone_StartScreen",
    "Phone_System_Power",
    "Phone_System_Profile",
    "Phone_UI_Input",
    "Security_Authentication_Identity_Core",
    "Security_Authentication_Identity_Provider",
    "Security_Authentication_OnlineId",
    "Security_Authentication_Web_Core",
    "Security_Authentication_Web_Provider",
    "Security_Authorization_AppCapabilityAccess",
    "Security_Credentials_UI",
    "Security_Cryptography_Certificates",
    "Security_Cryptography_Core",
    "Security_Cryptography_DataProtection",
    "Security_DataProtection",
    "Security_EnterpriseData",
    "Security_ExchangeActiveSyncProvisioning",
    "Security_Isolation",
    "Services_Cortana",
    "Services_Maps_Guidance",
    "Services_Maps_LocalSearch",
    "Services_Maps_OfflineMaps",
    "Services_Store",
    "Services_TargetedContent",
    "Storage_AccessCache",
    "Storage_BulkAccess",
    "Storage_Compression",
    "Storage_FileProperties",
    "Storage_Pickers_Provider",
    "Storage_Provider",
    "Storage_Search",
    "Storage_Streams",
    "System_Diagnostics_DevicePortal",
    "System_Diagnostics_Telemetry",
    "System_Diagnostics_TraceReporting",
    "System_Display",
    "System_Implementation_FileExplorer",
    "System_Inventory",
    "System_Power_Diagnostics",
    "System_Profile_SystemManufacturers",
    "System_RemoteDesktop_Input",
    "System_RemoteSystems",
    "System_Threading_Core",
    "System_Update",
    "System_UserProfile",
    "UI_Accessibility",
    "UI_ApplicationSettings",
    "UI_Composition_Core",
    "UI_Composition_Desktop",
    "UI_Composition_Diagnostics",
    "UI_Composition_Effects",
    "UI_Composition_Interactions",
    "UI_Composition_Scenes",
    "UI_Core_AnimationMetrics",
    "UI_Input_Core",
    "UI_Input_Inking_Analysis",
    "UI_Input_Inking_Core",
    "UI_Input_Inking_Preview",
    "UI_Input_Spatial",
    "UI_Notifications_Management",
    "UI_Popups",
    "UI_Shell",
    "UI_StartScreen",
    "UI_Text_Core",
    "UI_UIAutomation_Core",
    "UI_ViewManagement_Core",
    "UI_WebUI_Core",
    "UI_WindowManagement",
    "UI_Xaml_Automation_Peers",
    "UI_Xaml_Automation_Provider",
    "UI_Xaml_Automation_Text",
    "UI_Xaml_Controls_Maps",
    "UI_Xaml_Controls_Primitives",
    "UI_Xaml_Core_Direct",
    "UI_Xaml_Data",
    "UI_Xaml_Documents",
    "UI_Xaml_Hosting",
    "UI_Xaml_Input",
    "UI_Xaml_Interop",
    "UI_Xaml_Markup",
    "UI_Xaml_Media_Animation",
    "UI_Xaml_Media_Imaging",
    "UI_Xaml_Media_Media3D",
    "UI_Xaml_Navigation",
    "UI_Xaml_Printing",
    "UI_Xaml_Resources",
    "UI_Xaml_Shapes",
    "Web_AtomPub",
    "Web_Http_Diagnostics",
    "Web_Http_Filters",
    "Web_Http_Headers",
    "Web_Syndication",
    "Web_UI_Interop",
    "Win32_AI_MachineLearning_DirectML",
    "Win32_AI_MachineLearning_WinML",
    "Win32_Data_HtmlHelp",
    "Win32_Data_RightsManagement",
    "Win32_Data_Xml_MsXml",
    "Win32_Data_Xml_XmlLite",
    "Win32_Devices_AllJoyn",
    "Win32_Devices_BiometricFramework",
    "Win32_Devices_Bluetooth",
    "Win32_Devices_Communication",
    "Win32_Devices_DeviceAccess",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_DeviceQuery",
    "Win32_Devices_Display",
    "Win32_Devices_Enumeration_Pnp",
    "Win32_Devices_Fax",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Geolocation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_ImageAcquisition",
    "Win32_Devices_PortableDevices",
    "Win32_Devices_Properties",
    "Win32_Devices_Pwm",
    "Win32_Devices_Sensors",
    "Win32_Devices_SerialCommunication",
    "Win32_Devices_Tapi",
    "Win32_Devices_Usb",
    "Win32_Devices_WebServicesOnDevices",
    "Win32_Foundation",
    "Win32_Gaming",
    "Win32_Globalization",
    "Win32_Graphics_CompositionSwapchain",
    "Win32_Graphics_DXCore",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D9on12",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectDraw",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Printing_PrintTicket",
    "Win32_Management_MobileDeviceManagementRegistration",
    "Win32_Media_Audio_Apo",
    "Win32_Media_Audio_DirectMusic",
    "Win32_Media_Audio_DirectSound",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio_XAudio2",
    "Win32_Media_DeviceManager",
    "Win32_Media_DirectShow_Xml",
    "Win32_Media_DxMediaObjects",
    "Win32_Media_KernelStreaming",
    "Win32_Media_LibrarySharingServices",
    "Win32_Media_MediaFoundation",
    "Win32_Media_MediaPlayer",
    "Win32_Media_Multimedia",
    "Win32_Media_PictureAcquisition",
    "Win32_Media_Speech",
    "Win32_Media_Streaming",
    "Win32_Media_WindowsMediaFormat",
    "Win32_NetworkManagement_Dhcp",
    "Win32_NetworkManagement_Dns",
    "Win32_NetworkManagement_InternetConnectionWizard",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_MobileBroadband",
    "Win32_NetworkManagement_Multicast",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_NetBios",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_NetShell",
    "Win32_NetworkManagement_NetworkPolicyServer",
    "Win32_NetworkManagement_P2P",
    "Win32_NetworkManagement_QoS",
    "Win32_NetworkManagement_Rras",
    "Win32_NetworkManagement_Snmp",
    "Win32_NetworkManagement_WNet",
    "Win32_NetworkManagement_WebDav",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_WindowsConnectNow",
    "Win32_NetworkManagement_WindowsConnectionManager",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Networking_ActiveDirectory",
    "Win32_Networking_BackgroundIntelligentTransferService",
    "Win32_Networking_Clustering",
    "Win32_Networking_HttpServer",
    "Win32_Networking_Ldap",
    "Win32_Networking_NetworkListManager",
    "Win32_Networking_RemoteDifferentialCompression",
    "Win32_Networking_WebSocket",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinInet",
    "Win32_Networking_WinSock",
    "Win32_Networking_WindowsWebServices",
    "Win32_Security_AppLocker",
    "Win32_Security_Authorization_UI",
    "Win32_Security_ConfigurationSnapin",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Certificates",
    "Win32_Security_Cryptography_Sip",
    "Win32_Security_Cryptography_UI",
    "Win32_Security_DiagnosticDataQuery",
    "Win32_Security_DirectoryServices",
    "Win32_Security_EnterpriseData",
    "Win32_Security_ExtensibleAuthenticationProtocol",
    "Win32_Security_Isolation",
    "Win32_Security_LicenseProtection",
    "Win32_Security_NetworkAccessProtection",
    "Win32_Security_Tpm",
    "Win32_Security_WinTrust",
    "Win32_Security_WinWlx",
    "Win32_Storage_Cabinets",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_Compression",
    "Win32_Storage_DataDeduplication",
    "Win32_Storage_DistributedFileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileHistory",
    "Win32_Storage_FileServerResourceManager",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Imapi",
    "Win32_Storage_IndexServer",
    "Win32_Storage_InstallableFileSystems",
    "Win32_Storage_IscsiDisc",
    "Win32_Storage_Jet",
    "Win32_Storage_OfflineFiles",
    "Win32_Storage_OperationRecorder",
    "Win32_Storage_Packaging_Appx",
    "Win32_Storage_Packaging_Opc",
    "Win32_Storage_ProjectedFileSystem",
    "Win32_Storage_StructuredStorage",
    "Win32_Storage_Vhd",
    "Win32_Storage_VirtualDiskService",
    "Win32_Storage_Vss",
    "Win32_Storage_Xps_Printing",
    "Win32_System_AddressBook",
    "Win32_System_Antimalware",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_System_ApplicationVerifier",
    "Win32_System_AssessmentTool",
    "Win32_System_Com_CallObj",
    "Win32_System_Com_ChannelCredentials",
    "Win32_System_Com_Events",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com_UI",
    "Win32_System_Com_Urlmon",
    "Win32_System_ComponentServices",
    "Win32_System_Console",
    "Win32_System_Contacts",
    "Win32_System_CorrelationVector",
    "Win32_System_DataExchange",
    "Win32_System_DeploymentServices",
    "Win32_System_DesktopSharing",
    "Win32_System_DeveloperLicensing",
    "Win32_System_Diagnostics_Ceip",
    "Win32_System_Diagnostics_Debug_WebApp",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ProcessSnapshotting",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_DistributedTransactionCoordinator",
    "Win32_System_Environment",
    "Win32_System_ErrorReporting",
    "Win32_System_EventCollector",
    "Win32_System_EventLog",
    "Win32_System_EventNotificationService",
    "Win32_System_GroupPolicy",
    "Win32_System_HostCompute",
    "Win32_System_HostComputeNetwork",
    "Win32_System_HostComputeSystem",
    "Win32_System_Hypervisor",
    "Win32_System_IO",
    "Win32_System_Iis",
    "Win32_System_Ioctl",
    "Win32_System_JobObjects",
    "Win32_System_Js",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Mailslots",
    "Win32_System_Mapi",
    "Win32_System_Memory_NonVolatile",
    "Win32_System_MessageQueuing",
    "Win32_System_MixedReality",
    "Win32_System_Mmc",
    "Win32_System_Ole",
    "Win32_System_ParentalControls",
    "Win32_System_PasswordManagement",
    "Win32_System_Performance_HardwareCounterProfiling",
    "Win32_System_Pipes",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_RealTimeCommunications",
    "Win32_System_Recovery",
    "Win32_System_Registry",
    "Win32_System_RemoteAssistance",
    "Win32_System_RemoteDesktop",
    "Win32_System_RemoteManagement",
    "Win32_System_RestartManager",
    "Win32_System_Restore",
    "Win32_System_Rpc",
    "Win32_System_Search_Common",
    "Win32_System_SecurityCenter",
    "Win32_System_ServerBackup",
    "Win32_System_Services",
    "Win32_System_SettingsManagementInfrastructure",
    "Win32_System_SetupAndMigration",
    "Win32_System_Shutdown",
    "Win32_System_SideShow",
    "Win32_System_SqlLite",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SubsystemForLinux",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_TpmBaseServices",
    "Win32_System_TransactionServer",
    "Win32_System_UpdateAgent",
    "Win32_System_UpdateAssessment",
    "Win32_System_UserAccessLogging",
    "Win32_System_VirtualDosMachines",
    "Win32_System_WinRT_AllJoyn",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_CoreInputView",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Display",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Graphics_Direct2D",
    "Win32_System_WinRT_Graphics_Imaging",
    "Win32_System_WinRT_Holographic",
    "Win32_System_WinRT_Isolation",
    "Win32_System_WinRT_ML",
    "Win32_System_WinRT_Media",
    "Win32_System_WinRT_Pdf",
    "Win32_System_WinRT_Printing",
    "Win32_System_WinRT_Shell",
    "Win32_System_WinRT_Storage",
    "Win32_System_WinRT_Xaml",
    "Win32_System_WindowsProgramming",
    "Win32_System_WindowsSync",
    "Win32_System_Wmi",
    "Win32_UI_Accessibility",
    "Win32_UI_Animation",
    "Win32_UI_ColorSystem",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Controls_RichEdit",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_Ink",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_Radial",
    "Win32_UI_Input_Touch",
    "Win32_UI_Input_XboxController",
    "Win32_UI_InteractionContext",
    "Win32_UI_LegacyWindowsEnvironmentFeatures",
    "Win32_UI_Magnification",
    "Win32_UI_Notifications",
    "Win32_UI_Ribbon",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_TabletPC",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Wpf",
    "Win32_UI_Xaml_Diagnostics",
    "Win32_Web_MsHtml",

] }
